@@ -636,7 +636,7 @@ function ClearActiveDevices()
 			async: false, 
 			dataType: 'json',
 			success: function(data) {
-			RefreshSubDeviceTable($.devIdx);
+			RefreshActiveDevicesTable($.devIdx);
 		}
 	});
 }
